--- a/cliente_endereco.html
+++ b/cliente_endereco.html
@@ -160,7 +160,7 @@
                       </div>
                       <div class="text-end mt-3">
                         <button class="btn btn-outline-danger">Cancelar</button>
-                        <button class="btn btn-success">Salvar</button>
+                        <button class="btn btn-danger">Salvar</button>
                       </div>
                     </div>
                   </form>
