--- a/cliente_senha.html
+++ b/cliente_senha.html
@@ -142,7 +142,7 @@
                       </div>
                       <div class="text-end mt-3">
                         <button class="btn btn-outline-danger">Cancelar</button>
-                        <a href="https://anevenancio.github.io/floreios/cliente_senha_confirm.html" class="btn btn-success">Alterar Senha</a>
+                        <a href="https://anevenancio.github.io/floreios/cliente_senha_confirm.html" class="btn btn-danger">Alterar Senha</a>
                       </div>
                     </div>
                   </form>
