--- a/trabalheconosco.html
+++ b/trabalheconosco.html
@@ -171,7 +171,7 @@
                   
                   <!-- Início - Botão de envio-->
                   <button type="reset" onclick="window.location.href='https://anevenancio.github.io/floreios/trabalheconosco.html'" class="btn btn-sucess mb-3">Limpar</button>
-                  <button type="submit" onclick="window.location.href='/confirmcontato.html'" class="btn btn-outline-dark mb-3">Submeter candidatura</button>
+                  <button type="submit" onclick="window.location.href='https://anevenancio.github.io/floreios/confirmcontato.html'" class="btn btn-outline-dark mb-3">Submeter candidatura</button>
                   <!-- Fim - Botão de envio-->
   
                 </div>
