--- a/quemsomos.html
+++ b/quemsomos.html
@@ -155,10 +155,10 @@
             </p>
             <hr style="color: #b22427;">
             <p class="m-4" >
-              <i class="bi bi-github" style="font-size: 30px;"></i><a href="https://github.com/anevenancio"></a>
-              <i class="bi bi-behance"style="font-size: 30px;"></i><a href="https://www.behance.net/rabiscosefloreios"></a>
-              <i class="bi bi-pinterest"style="font-size: 30px;"></i></i><a href="https://br.pinterest.com/anebelove/"></a>
-              <i class="bi bi-instagram"style="font-size: 30px;"></i> <a href="https://www.instagram.com/rabiscosefloreios/"></a><br> 
+              <a href="https://github.com/anevenancio"><i class="bi bi-github" style="font-size: 30px;"></i></a>
+              <a href="https://www.behance.net/rabiscosefloreios"><i class="bi bi-behance"style="font-size: 30px;"></i></a>
+              <a href="https://br.pinterest.com/anebelove/"><i class="bi bi-pinterest"style="font-size: 30px;"></i></i></a>
+              <a href="https://www.instagram.com/rabiscosefloreios/"><i class="bi bi-instagram"style="font-size: 30px;"></i></a><br> 
             </p>
           </div>
         </div>
